Sugati/src/objects/None_Licenseable_Protection_Cost__c.object
<CustomObject>
    <fields>
        <fullName>NLPC_High_Band__c</fullName>
        <label>High Band</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NLPC_Low_Band__c</fullName>
        <label>Low Band</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NLPC_Premium_PP__c</fullName>
        <label>Premium PP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>None Licenseable Protection Cost</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NLPC_Low_Band__c</columns>
        <columns>NLPC_High_Band__c</columns>
        <columns>NLPC_Premium_PP__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NLP-{0000000000}</displayFormat>
        <label>None Licenseable Protection Cost ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>None Licenseable Protection Costs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>